--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@edge-csrf/core": "2.5.3-cloudflare-rc1",
     "@hookform/resolvers": "^3.9.1",
     "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/extension-accelerate": "^1.3.0",
